[package]
description = "KardiaChain Network"
name = "kardiachain"
version = "1.0.0"
license = "GPL-3.0, LGPL-3.0"
authors = ["KardiaChain Contributors"]
edition = "2021"

[workspace]
members = [
    "source/chainspec",
    "packages/core",
    "packages/store",
    "packages/primitives/core",
    "packages/primitives/std",
    "packages/primitives/types",
    "packages/primitives/core/hashing",
	"packages/primitives/core/hashing/proc-macro",
    "packages/primitives/serializer"
]

[[bin]]
name = "client"
path = "source/client/src/main.rs"

[workspace.dependencies]
# internal packages
kp-core = { path = "packages/primitives/core" }
kai-core = { path = "packages/core" }
kai-store = { path = "packages/store"}
kai-primitives-core = { path = "source/core"}
kai-primitives = { path = "packages/primitives"}
# kai-accounts = { path = "packages/accounts" }
kai_p2p = { path = "packages/p2p" }
kai-consensus = { path = "packages/consensus" }
kai_proto = { path = "packages/proto" }
# kai-rpc = { path = "packages/rpc" }
# kai-txpool = { path = "packages/txpool" }
# kai-utils = { path = "packages/utils" }
# kai-vm = { path = "packages/vm" }
prost = "0.10"
tonic = "0.7"
parity-util-mem = "0.12.0"
smallvec = "1.10.0"
rocksdb = "0.19.0"
enum-map = "2.4.1"
strum = "0.24"
strum_macros = "0.24"
tracing = "0.1.36"
bytesize = "1.1.0"
rlimit = "0.8.3"
num_cpus = "1.13.1"
thiserror = "1.0.37"
anyhow = "1.0.65"
tempfile = "3.3.0"
once_cell = "1.15.0"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_ignored = "0.1"
serde_json = "1.0.68"
serde_repr = "0.1.8"
assert_matches = "1.5.0"
borsh = "0.9.3"
kvdb-rocksdb = "0.16.0"
kvdb = "0.12.0"
kvdb-memorydb = "0.12.0"
parity-db = "0.4.0"
log = "0.4.17"
rlp = "0.5.1"
ethereum-types = { version = "0.14.0", features = ["ethbloom"]}
parity-crypto = { version = "0.9.0", features = ["publickey"] }
keccak-hash = "0.10.0"
primitive-types = "0.12.0"

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"
