
[package]
name = "kai-primitives-core"
version = "0.0.0"
publish = true
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.63.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
This crate provides the core set of primitives used by other kaicore crates including kai-primitives
"""
[dependencies]
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
serde_repr = { version = "0.1.8" }
bs58 = "0.4"

[dev-dependencies]
serde_json = "1"